--- a/src/user/apps/Makefile
+++ b/src/user/apps/Makefile
@@ -1,7 +1,7 @@
 include ../../mk/flags.mk
 include ../../mk/build.mk
 
-all: term/term init/init test/test
+all: term/term init/init test/test ls/ls
 
 term/term:
 	cd term && make all
@@ -12,7 +12,12 @@ init/init:
 test/test:
 	cd test && make all
 
+ls/ls:
+	cd ls && make all
+
 clean:
 	cd term && make clean
 	cd init && make clean
 	cd test && make clean
+	cd ls && make clean
+
