test is now test.cpp but uses ABI

--- a/src/user/apps/Makefile
+++ b/src/user/apps/Makefile
@@ -1,18 +1,10 @@
 include ../../mk/flags.mk
 include ../../mk/build.mk
 
-all: term/term init/init test/test ls/ls
-
-term/term:
+all:
 	cd term && make all
-
-init/init:
 	cd init && make all
-
-test/test:
 	cd test && make all
-
-ls/ls:
 	cd ls && make all
 
 clean:
