--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,4 @@
 cmake_minimum_required(VERSION 3.16)
-
-project(CosmOS VERSION 1.0
-               LANGUAGES C CXX ASM_NASM )
+project(CosmOS VERSION 1.0)
 
 add_subdirectory(src/boot)
