port video out of kernel to userland
kernel code still exists until we get syscalls working

--- a/src/user/Makefile
+++ b/src/user/Makefile
@@ -4,6 +4,8 @@ include ../mk/mtools.mk
 
 COSMOS_INITRD_IMAGE=initrd.img
 COSMOS_LIB_ARCHIVE=lib/libcosmos.a
+COSMOS_VIDEO_ARCHIVE=video/libvideo.a
+
 MKINITRD=../util/mkinitrd/mkinitrd
 
 EXTRA_CFLAGS= -I.
@@ -15,7 +17,10 @@ all: $(COSMOS_INITRD_IMAGE) rootfs
 $(COSMOS_LIB_ARCHIVE):
 	make -C lib
 
-$(COSMOS_INITRD_IMAGE): $(COSMOS_LIB_ARCHIVE) 
+$(COSMOS_VIDEO_ARCHIVE):
+	make -C video
+
+$(COSMOS_INITRD_IMAGE): $(COSMOS_LIB_ARCHIVE) $(COSMOS_VIDEO_ARCHIVE)
 	$(RM) $(COSMOS_INITRD_IMAGE)
 	make -C apps
 	cp apps/test/test.bin fs/rootfs/
@@ -35,4 +40,5 @@ clean:
 	cd mkroot; make clean
 	cd apps; make clean
 	cd lib; make clean
-
+	cd video; make clean
+	
