--- a/src/kernel/CMakeLists.txt
+++ b/src/kernel/CMakeLists.txt
@@ -5,11 +5,13 @@ set(TARGET_PLATFORM "x86-64")
 
 # includes
 include("cmake/load_platform.cmake")
+include("cmake/cflags.cmake")
+include("cmake/nasmflags.cmake")
 
 # load our platform specific sources and flags
 LOAD_PLATFORM("${TARGET_PLATFORM}")
 
-# load all generic sources
+# process generic sources
 file(GLOB_RECURSE GENERIC_SRCS CONFIGURE_DEPENDS
     "*.c"
     "*.h"
@@ -20,6 +22,13 @@ list (REMOVE_ITEM GENERIC_SRCS ${ALL_PLATFORM_SRCS}})
 # Now set up our environment
 add_library(kernel STATIC ${PLATFORM_SRCS} ${GENERIC_SRCS})
 target_include_directories (kernel PRIVATE .)
+target_compile_options(kernel
+  PRIVATE
+      $<$<COMPILE_LANGUAGE:C>:${C_FLAGS}>
+      $<$<COMPILE_LANGUAGE:ASM_NASM>:${NASM_FLAGS}>
+  )
+target_link_options(kernel PRIVATE 
+  "-T ${CMAKE_SOURCE_DIR}/${PLATFORM_LAYOUT}")
 
 # ADD_EXECUTABLE(kernel ${PLATFORM_SRCS} ${ISA_SRCS} ${GENERIC_SRCS})
  
