--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,40 @@
 cmake_minimum_required(VERSION 3.16)
 project(CosmOS VERSION 1.0)
 
-# Force external build
-if(${CMAKE_CURRENT_SOURCE_DIR} STREQUAL ${CMAKE_CURRENT_BINARY_DIR} AND NOT WIN32)
-	message(FATAL_ERROR "You can not use CMake to build from the root of it's source tree! Remove the CMakeCache.txt file from this directory, then create a separate directory (either below this directory or elsewhere), and then re-run CMake from there.")
-endif(${CMAKE_CURRENT_SOURCE_DIR} STREQUAL ${CMAKE_CURRENT_BINARY_DIR} AND NOT WIN32)
-
+set(TARGET_PLATFORM "x86-64")
 
 add_subdirectory(src/boot)
+add_subdirectory(src/kernel)
+add_subdirectory(src/util/mkinitrd)
+
+
+# define a custom command to concatenate the object files in sequence into a bootimage.
+set(HDA_FILE hda.img)
+add_custom_command(
+    OUTPUT ${HDA_FILE}
+
+    # init the file
+	COMMAND test -f $(HDA_FILE) || $(DD) if=/dev/zero of=${HDA_FILE} bs=32768 count=129024 
+    
+    # write boot loader
+    COMMAND dd if=$<TARGET_FILE:bootimage> of=${HDA_FILE} conv=notrunc bs=512 status=none
+
+	# # write kernel
+	COMMAND dd if=$<TARGET_FILE:kernel> of=${HDA_FILE} conv=notrunc bs=512 seek=4
+
+	# # write initrd fs at offset of 10MB
+	COMMAND dd if=$<TARGET_FILE:initrd> of=${HDA_FILE} conv=notrunc bs=512 seek=20480
+
+    # wait for dependencies
+    DEPENDS bootimage
+            kernel
+            initrd
+
+    COMMENT "Building ${HDA_FILE}"
+)
+
+# create a target for the output of the custom command.
+add_custom_target(hda
+    ALL     
+    DEPENDS ${HDA_FILE}
+)
