--- a/src/boot/CMakeLists.txt
+++ b/src/boot/CMakeLists.txt
@@ -1,6 +1,6 @@
-cmake_minimum_required(VERSION 3.16)
+cmake_minimum_required(version 3.16)
 project(bootloader)
 
-#TODO: do we still need to build ARM?
+# TODO: do we still need to build ARM?
 
 add_subdirectory(x86-64)
