--- a/src/boot/CMakeLists.txt
+++ b/src/boot/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(version 3.16)
+cmake_minimum_required(VERSION 3.16)
 project(bootloader)
 
 # TODO: do we still need to build ARM?
