--- a/src/kernel/CMakeLists.txt
+++ b/src/kernel/CMakeLists.txt
@@ -1,5 +1,5 @@
-cmake_minimum_required(version 3.16)
-project(kernel languages C ASM_NASM)
+cmake_minimum_required(VERSION 3.16)
+project(kernel LANGUAGES C ASM_NASM)
 
 # includes
 include("cmake/load_platform.cmake")
@@ -11,17 +11,17 @@ load_platform("${TARGET_PLATFORM}")
 
 # process generic sources
 file(
-  glob_recurse
+  GLOB_RECURSE
   GENERIC_SRCS
-  configure_depends
+  CONFIGURE_DEPENDS
   "*.c"
   "*.h"
   "*.asm"
 )
-list(remove_item GENERIC_SRCS ${ALL_PLATFORM_SRCS}})
+list(REMOVE_ITEM GENERIC_SRCS ${ALL_PLATFORM_SRCS}})
 
 # build kernel target
-add_library(kernel static ${PLATFORM_SRCS} ${GENERIC_SRCS})
-target_include_directories(kernel private .)
-target_compile_options(kernel private $<$<COMPILE_LANGUAGE:C>:${C_FLAGS}> $<$<COMPILE_LANGUAGE:ASM_NASM>:${NASM_FLAGS}>)
+add_library(kernel STATIC ${PLATFORM_SRCS} ${GENERIC_SRCS})
+target_include_directories(kernel PRIVATE .)
+target_compile_options(kernel PRIVATE $<$<COMPILE_LANGUAGE:C>:${C_FLAGS}> $<$<COMPILE_LANGUAGE:ASM_NASM>:${NASM_FLAGS}>)
 target_link_options(kernel PRIVATE "-T ${CMAKE_SOURCE_DIR}/${PLATFORM_LAYOUT}")
