--- a/src/boot/CMakeLists.txt
+++ b/src/boot/CMakeLists.txt
@@ -1,6 +1,4 @@
 cmake_minimum_required(VERSION 3.16)
 project(bootloader)
 
-# TODO: do we still need to build ARM?
-
-add_subdirectory(x86_64)
+add_subdirectory(${CMAKE_SYSTEM_PROCESSOR})
