--- a/src/kernel/Makefile
+++ b/src/kernel/Makefile
@@ -11,7 +11,7 @@ EXTRA_CFLAGS= -I.
 
 SRC_DIR=.
 
-ifeq ($(TARGET_PLATFORM),TARGET_PLATFORM_i386)
+ifeq ($(TARGET_PLATFORM),TARGET_PLATFORM_x86_64)
 IGNORE_DIRS=/arm/
 else
 IGNORE_DIRS=/i386/
@@ -38,7 +38,7 @@ $(KERNEL_BIN): $(KERNEL_ELF)
 	$(OBJCOPY) $(OBJCOPYFLAGS) $(KERNEL_ELF) $(KERNEL_BIN)
 
 $(KERNEL_ELF): $(ARCHIVE_FILE)
-ifeq ($(TARGET_PLATFORM),TARGET_PLATFORM_i386)
+ifeq ($(TARGET_PLATFORM),TARGET_PLATFORM_x86_64)
 	$(LD) $(KERNEL_LDFLAGS) -o $(KERNEL_ELF) $(ARCHIVE_FILE)
 else
 	$(LD) $(KERNEL_LDFLAGS) -o $(KERNEL_ELF) $(ARCHIVE_FILE)
