--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
       "type": "gdb",
       "request": "attach",
       "name": "Cosmos GDB Linux - attach to qemu",
-      "executable": "src/kernel/cosmos.elf",
+      "executable": "build/kernel.elf",
       "target": ":1234",
       "remote": true,
       "cwd": "${workspaceRoot}",
@@ -18,12 +18,8 @@
       "type": "lldb",
       "request": "custom",
       "name": "Cosmos LLDB OS X- attach to qemu",
-      "targetCreateCommands": [
-        "target create ${workspaceRoot}/src/kernel/cosmos.elf"
-      ],
-      "processCreateCommands": [
-        "gdb-remote localhost:1234"
-      ]
+      "targetCreateCommands": ["target create ${workspaceRoot}/build/kernel.elf"],
+      "processCreateCommands": ["gdb-remote localhost:1234"]
     }
   ]
 }
