--- a/src/Makefile
+++ b/src/Makefile
@@ -13,7 +13,9 @@ CRUFT_FILES=$(shell find . -type f \( -name "dump.dat" -o \
 all: subsystems
 .PHONY: clean header-check header-fix
 
-bootimage: header-check lint subsystems blank-disk
+# Disabling header-check in the bootimage target until I can figure out why it prevents proper generation of dependencies
+#bootimage: header-check lint subsystems blank-disk
+bootimage: lint subsystems blank-disk
 	# make a file
 	#$(DD) if=/dev/zero of=$(BOOTIMAGE) bs=32768 count=129024
 	test -f $(BOOTIMAGE) || $(DD) if=/dev/zero of=$(BOOTIMAGE) bs=32768 count=129024 
